--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,10 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet"  type="text/css" href="./css/style.css">
   <script type="text/javascript" src="./js/index.js"></script>
   <title>Ironhack cart</title>
 </head>
 <body>
+<div class="title-main">
+    <h1>Ironhack Merchandising Shop</h1>
+</div> 
+  
+    <div class="container">
+
+<div>
+  <span class="title">ironBubble-head</span>
+</div>
+<div>
+  <span class="cost">10</span>
+</div>
+<div>
+  <label for="unidades">QTY</label>
+  <input class="quantity" name="unidades" type="number">
+</div>
+<div>
+  <span id="price_all">0</span>
+</div>
+<div>
+  <button class="btn-delete">delete</button>
+</div>
+</div>
+<div class="box_success ">
+    <button id="calc-prices-button" class="btn-success">Calculate Prices</button>
+  </div>
+
+
+
+
 </body>
 </html>
