--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,13 +20,15 @@
   <span class="title">ironBubble-head</span>
 </div>
 <div>
-  <span class="cost">10</span>
+  <span>$</span>
+  <span id="cost">10</span>
 </div>
 <div>
   <label for="unidades">QTY</label>
-  <input class="quantity" name="unidades" type="number">
+  <input id="quantity" name="unidades" type="number">
 </div>
 <div>
+  <span>$</span>
   <span id="price_all">0</span>
 </div>
 <div>
